corrected background in blog

--- a/src/components/BlogSection/BlogSection.module.css
+++ b/src/components/BlogSection/BlogSection.module.css
@@ -1,6 +1,6 @@
 .mainCoverContainer {
     min-height: 100vh;
-     background-color: var(--black-color);
+     background-color: var(--purple-color);
      display: flex;
      justify-content: space-around;
      align-items: center;
