--- a/src/components/LandingSection/LandingSection.module.css
+++ b/src/components/LandingSection/LandingSection.module.css
@@ -1,8 +1,12 @@
 .mainCoverContainer {
     min-height: 100vh;
-     background-color: var(--purple-color);
      display: flex;
      justify-content: space-around;
-     align-items: center;
+     align-items: center; 
+}
+
+p {
+     color: var(--white-color);
+     z-index: 1;
 }
 
