--- a/src/components/LandingSection/LandingSection.module.css
+++ b/src/components/LandingSection/LandingSection.module.css
@@ -1,12 +1,19 @@
 .mainCoverContainer {
     min-height: 100vh;
      display: flex;
-     justify-content: space-around;
-     align-items: center; 
+     flex-direction: column;
+     justify-content: flex-start;
 }
 
-p {
+h1 {
      color: var(--white-color);
      z-index: 1;
+     font-family: sans-serif;
+     font-size: 70px;
+     
 }
 
+h2, h3 {
+     color: var(--white-color);
+     z-index: 1; 
+}
