--- a/src/components/LandingSection/LandingSection.module.css
+++ b/src/components/LandingSection/LandingSection.module.css
@@ -1,19 +1,33 @@
 .mainCoverContainer {
     min-height: 100vh;
-     display: flex;
-     flex-direction: column;
-     justify-content: flex-start;
+    
 }
+
 
 h1 {
      color: var(--white-color);
      z-index: 1;
      font-family: sans-serif;
-     font-size: 70px;
-     
+}
+@media screen and (min-width: 600px) {
+     h1 {
+          font-size: 12em;
+          margin-top: 250px
+     }
+}
+@media screen and (max-width: 600px) {
+     h1 {
+          font-size: 4em;
+          margin-top: 440px
+     }
 }
 
 h2, h3 {
      color: var(--white-color);
      z-index: 1; 
+}
+
+.header {
+display: grid;
+
 }
