--- a/src/components/AboutMe/AboutMe.module.css
+++ b/src/components/AboutMe/AboutMe.module.css
@@ -13,6 +13,17 @@ text-align: left;
 }
 }
 
+@media screen and (min-width: 800px) {
+.header {
+position: absolute;
+right: 0;
+bottom: -600px;
+left: 0;
+padding: 1rem;
+text-align: left;
+}
+}
+
 
 p {
      color: var(--white-color)
