--- a/src/components/TechnologySection/TechnologySection.module.css
+++ b/src/components/TechnologySection/TechnologySection.module.css
@@ -1,12 +1,55 @@
 .mainCoverContainer {
     min-height: 100vh;
      display: flex;
-     justify-content: space-around;
      align-items: center;
+     background-color: var(--black-color)
      
 }
 
-p {
+/* p {
      color: var(--white-color);
      z-index: 1;
+} */
+
+
+.container {
+  width: 1000px; 
+  line-height: 1.3;
+}
+ol.even {
+  position: relative;
+  left: 5em;
+}
+ol.odd {
+  position: relative;
+  margin-top: -6.5%;
+  margin-bottom: -6.5%;
+}
+.hex {
+  position: relative;
+  margin: 1em auto;
+  width: 5em; height: 9em;
+  border-radius: 1em/.5em;
+  background: #ccc;
+  transform: rotate(-90deg);
+  display: inline-block;
+  margin-right: 5em;
+  transition: all 150ms ease-in-out;
+}
+.hex:before, .hex:after {
+  position: absolute;
+  width: inherit; height: inherit;
+  border-radius: inherit;
+  background: inherit;
+  content: '';
+}
+.hex:before {
+  transform: rotate(60deg);
+}
+.hex:after {
+  transform: rotate(-60deg);
+}
+.hex:hover {
+  background: #F58787;
+  cursor: pointer;
 }
