--- a/src/components/TechnologySection/TechnologySection.module.css
+++ b/src/components/TechnologySection/TechnologySection.module.css
@@ -1,7 +1,7 @@
 .mainCoverContainer {
     min-height: 100vh;
      display: flex;
-     align-items: center;
+     justify-content: center;
      background-color: var(--black-color)
      
 }
@@ -12,9 +12,11 @@
 } */
 
 
-.container {
+.hexContainer {
   width: 1000px; 
   line-height: 1.3;
+  margin-top: 75px;
+
 }
 ol.even {
   position: relative;
