--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,29 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.g-card {
+  margin: 20px
+}
+
+.g-margin-image {
+  border-radius: 10px;
+  width: 300px;
+  height: 480px;
+  box-shadow: 0px 0px 3px 1px #ccc
+}
+
+.g-card-info {
+  margin-top: 10px;
+  min-height:180px;
+}
+
+.g-card-title {
+  font-size: 24px;
+  margin: 0px;
+}
+
+.g-card-sub-title {
+  font-size: 16px;
+  margin: 0px
+}
