--- a/src/index.css
+++ b/src/index.css
@@ -16,28 +16,31 @@ code {
     monospace;
 }
 
-.g-card {
+
+
+
+.gCard {
   margin: 20px
 }
 
-.g-margin-image {
+.gCardImage {
   border-radius: 10px;
   width: 300px;
   height: 480px;
   box-shadow: 0px 0px 3px 1px #ccc
 }
 
-.g-card-info {
+.gCardInfo {
   margin-top: 10px;
   min-height:180px;
 }
 
-.g-card-title {
+.gCardTitle {
   font-size: 24px;
   margin: 0px;
 }
 
-.g-card-sub-title {
+.gCardSubTitle {
   font-size: 16px;
   margin: 0px
 }
