created slider for blog

--- a/src/components/BlogSection/BlogSection.module.css
+++ b/src/components/BlogSection/BlogSection.module.css
@@ -1,8 +1,6 @@
 .mainCoverContainer {
     min-height: 100vh;
-     display: flex;
-     justify-content: space-around;
-     align-items: center;
+    background-color: var(--black-color)
 }
 
 p {
