--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,43 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.wrapper{
+  display: grid;
+  grid-template-columns: repeat(3,100%);
+
+}
+
+section {
+    width: 100%;
+    height:100px;
+    position: relative;
+}
+
+a {
+  position: absolute;
+  color: #331832;
+  text-decoration: none;
+  font-size: 6em;
+  background: rgb(0,0,0);
+  width: 80px;
+  padding: 20px;
+  text-align: center;
+  z-index: 1;
+}
+
+
+
+    section:nth-child(1) {
+        background: #7e7e7e;
+    }
+
+  
+    section:nth-child(2) {
+        background: #dedede;
+    }
+
+    section:nth-child(3) {
+        background: #ffffff
+    }
+    
