--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,6 @@ code {
 
 section {
     width: 100%;
-    height:100px;
     position: relative;
 }
 
@@ -40,6 +39,19 @@ a {
   z-index: 1;
 }
 
+a:nth-of-type(1) {
+  top:0;
+  bottom:0;
+  left: 0;
+  background: linear-gradient(-90deg, rgba(0,0,0,0)0%, rgba(0,0,0,1) 100%)
+}
+
+a:nth-of-type(2) {
+  top:0;
+  bottom:0;
+  left: 0;
+  background: linear-gradient(90deg, rgba(0,0,0,0)0%, rgba(0,0,0,1) 100%)
+}
 
 
     section:nth-child(1) {
