--- a/src/index.css
+++ b/src/index.css
@@ -16,15 +16,33 @@ code {
     monospace;
 }
 
+
+
 .wrapper{
   display: grid;
   grid-template-columns: repeat(3,100%);
-
+  overflow:hidden;
+  scroll-behavior: smooth;
 }
 
 section {
     width: 100%;
     position: relative;
+    display: grid;
+    grid-template-columns: (5, auto);
+    margin: 20px, 0;
+}
+
+.item {
+  padding: 0, 2px;
+  height: 50px;
+  height: 50px;
+
+}
+
+.item:hover {
+   margin: 0 10px;
+  transform: scale(1.2);
 }
 
 a {
@@ -54,16 +72,4 @@ a:nth-of-type(2) {
 }
 
 
-    section:nth-child(1) {
-        background: #7e7e7e;
-    }
-
-  
-    section:nth-child(2) {
-        background: #dedede;
-    }
-
-    section:nth-child(3) {
-        background: #ffffff
-    }
     
