--- a/src/index.css
+++ b/src/index.css
@@ -18,58 +18,78 @@ code {
 
 
 
-.wrapper{
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  margin: 0;
+  background-color: #000;
+}
+
+h1 {
+  font-family: Arial;
+  color: red;
+  text-align: center;
+}
+
+.wrapper {
   display: grid;
   grid-template-columns: repeat(3,100%);
   overflow:hidden;
   scroll-behavior: smooth;
+
 }
 
-section {
+  section {
     width: 100%;
     position: relative;
     display: grid;
-    grid-template-columns: (5, auto);
-    margin: 20px, 0;
-}
-
-.item {
-  padding: 0, 2px;
-  height: 50px;
-  height: 50px;
-
-}
-
-.item:hover {
-   margin: 0 10px;
-  transform: scale(1.2);
-}
-
-a {
-  position: absolute;
-  color: #331832;
-  text-decoration: none;
-  font-size: 6em;
-  background: rgb(0,0,0);
-  width: 80px;
-  padding: 20px;
-  text-align: center;
-  z-index: 1;
-}
-
-a:nth-of-type(1) {
-  top:0;
-  bottom:0;
-  left: 0;
-  background: linear-gradient(-90deg, rgba(0,0,0,0)0%, rgba(0,0,0,1) 100%)
-}
-
-a:nth-of-type(2) {
-  top:0;
-  bottom:0;
-  left: 0;
-  background: linear-gradient(90deg, rgba(0,0,0,0)0%, rgba(0,0,0,1) 100%)
-}
-
-
+    grid-template-columns: repeat(5, auto);
+    margin: 20px 0;
+  }
     
+    .item {
+      padding: 0 2px;
+      transition: 0.25s all;
+    }
+      
+    .item:hover { 
+        margin: 0 40px;
+        transform: scale(1.2);
+      }
+      
+    
+    
+    a {
+      position: absolute;
+      color: #fff;
+      text-decoration: none;
+      font-size: 6em;
+      background:rgb(0,0,0);
+      width: 80px;
+      padding: 20px;
+      text-align: center;
+      z-index: 1;
+    }
+
+      
+      a:nth-of-type(1) {
+        top:0; bottom:0; left:0;
+        background: linear-gradient(-90deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 100%);
+      }
+
+      a:nth-of-type(2) {
+        top:0; bottom:0; right: 0;
+        background: linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 100%);
+      }
+      
+    
+
+
+@media only screen and (max-width: 600px) {
+  a.arrow__btn {
+    display:none;
+  }
+}
