--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -5,7 +5,7 @@
 
 
 .footerText {
-    color: var(--white-color);
+    color: #A9A9A9;
      z-index: 1;
      font-size: 15px;
      text-align: center
