--- a/src/index.css
+++ b/src/index.css
@@ -94,3 +94,30 @@ h1 {
   }
 }
 
+
+.g-card {
+  margin: 20px
+}
+
+.g-margin-image {
+  border-radius: 10px;
+  width: 300px;
+  height: 480px;
+  box-shadow: 0px 0px 3px 1px #ccc
+}
+
+.g-card-info {
+  margin-top: 10px;
+  min-height:180px;
+}
+
+.g-card-title {
+  font-size: 24px;
+  margin: 0px;
+}
+
+.g-card-sub-title {
+  font-size: 16px;
+  margin: 0px
+}
+
