--- a/src/components/ContactMe/ContactMe.module.css
+++ b/src/components/ContactMe/ContactMe.module.css
@@ -1,15 +1,22 @@
-.mainContainer {
+/* .mainContainer {
   min-height: 40vh;
   background-color: #331832;
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
+} */
+
+
+h1 {
+  color: white;
+  text-align: center;
+  padding: 40px;
+  font-size: 35px;
 }
 
-p {
-    color: var(--white-color);
-     z-index: 1;
+h2 {
+  color: white;
 }
 
 .contact {
