--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,6 @@ html {
 
 body {
   margin: 0;
-  background-color: #000;
 }
 
 h1 {
@@ -68,7 +67,7 @@ h1 {
       
     
     
-    a {
+    .arrow__btn {
       position: absolute;
       color: #fff;
       text-decoration: none;
@@ -81,12 +80,12 @@ h1 {
     }
 
       
-      a:nth-of-type(1) {
+      .arrow__btn:nth-of-type(1) {
         top:0; bottom:0; left:0;
         background: linear-gradient(-90deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 100%);
       }
 
-      a:nth-of-type(2) {
+      .arrow__btn:nth-of-type(2) {
         top:0; bottom:0; right: 0;
         background: linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 100%);
       }
