--- a/src/components/ContactMe/ContactMe.module.css
+++ b/src/components/ContactMe/ContactMe.module.css
@@ -1,11 +1,10 @@
-/* .mainContainer {
-  min-height: 40vh;
-  background-color: #331832;
+ .mainContainer {
+  min-height: 50vh;
+  background-color: var(--black-color);
   display: flex;
   justify-content: center;
-  flex-direction: column;
   align-items: center;
-} */
+}
 
 
 h1 {
@@ -30,8 +29,6 @@ h2 {
   position: relative;
   font-size: 2.3rem;
   text-align: center;
-  width: 100%;
-  margin-left: 33px;
 }
 
 .contactList li a {
@@ -44,19 +41,20 @@ h2 {
   left: -20px;
   display: inline-block;
   height: 80px;
-  width: 70px;
+  width: 80px;
   margin: 10px auto;
   line-height: 70px;
   border-radius: 10%;
   color: #fff;
-  background-color: white;
+  background-color: var(--black-color);
   cursor: pointer;
   transition: all 0.2s ease-in-out;
   margin: 10px;
+  border-radius: 50%;
 }
 
 .contactList li:hover {
-  background-color: black;
+  background-color: var(--white-color);
 }
 
 .contactList li:hover:after {
@@ -66,7 +64,7 @@ h2 {
 }
 
 .contactList li:hover a {
-  color: #111;
+  color: var(--black-color);
 }
 
 .container {
@@ -79,10 +77,13 @@ h2 {
   width: 220px;
   height: 48px;
   margin: 3px;
-  background-color: #331832;
+  background-color: var(--black-color);
   color: white;
-  text-align: center;
+  text-align: left;
+  font-family: sans-serif;
 }
+
+
 
 .email {
   width: 220px;
@@ -90,9 +91,10 @@ h2 {
   border: 2px solid white;
   border-radius: 5px;
   margin: 3px;
-  background-color: #331832;
+  background-color: var(--black-color);
   color: white;
-  text-align: center;
+  text-align: left;
+  font-family: sans-serif;
 }
 
 .message {
@@ -101,9 +103,10 @@ h2 {
   border: 2px solid white;
   border-radius: 5px;
   margin: 3px;
-  background-color: #331832;
+  background-color: var(--black-color);
   color: white;
-  text-align: center;
+  text-align: left;
+  font-family: sans-serif;
 }
 
 .button {
@@ -120,7 +123,7 @@ h2 {
 }
 
 .button:hover {
-  background-color: black;
+  background-color: var(--purple-color);
   color: white;
   border: black;
 }
