--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,10 +1,12 @@
 .gCard {
+  display: inline-block;
   margin: 20px
+  
 }
 
-.gMarginImage {
+.gCardImage {
   border-radius: 10px;
-  width: 300px;
-  height: 480px;
+  width: 280px;
+  height: 280px;
   box-shadow: 0px 0px 3px 1px #ccc
 }
