--- a/src/components/AboutMe/AboutMe.module.css
+++ b/src/components/AboutMe/AboutMe.module.css
@@ -1,82 +1,52 @@
+
+@import url('https://fonts.googleapis.com/css?family=Indie+Flower&display=swap');
+
+.paragraph {
+    font-family: 'Indie Flower', cursive;
+}
+
 .mainCoverContainer {
-    min-height: 100vh;
-    width: 100%
+    min-height: 70vh;
+    width: 100%;
+    box-sizing: border-box;
 }
 
-@media screen and (max-width: 800px) {
 .header {
-position: absolute;
-right: 0;
-bottom: -500px;
-left: 0;
-padding: 1rem;
-text-align: left;
-}
-}
-
-@media screen and (min-width: 800px) {
-.header {
-position: absolute;
-right: 0;
-bottom: -600px;
-left: 0;
-padding: 1rem;
-text-align: left;
-}
+    position: relative;
+        z-index: 999;
+        margin: 0 auto;
+        left: 0;
+        right: 0;
+        top: 40%;
 }
 
-
-p {
-     color: var(--white-color)
+.about {
+    font-size: 40px;
+    position: relative;
+    padding: 25px 0px 20px 0px;
+    margin: 10px 0px 22px 0px;
+    line-height: 20px;
+    margin-left: 25px;
 }
 
-@media screen and (min-width: 800px) {
-    .forty {
-        font-size: 40px;
-    }
-}
-
-
-@media screen and (max-width: 800px) {
-    .forty {
-        font-size: 20px;
-    }
-}
-
-@media screen and (min-width: 800px) {
-    .hundered {
-        font-size: 100px;
-    }
-}
-
-@media screen and (max-width: 800px) {
-    .hundered {
-        font-size: 50px;
-    }
-}
-
-@media screen and (min-width: 800px) {
-    .fifty {
-        font-size: 50px;
-    }
-}
-
-
-@media screen and (max-width: 800px) {
-    .fifty {
+@media screen and (max-width: 800px){
+    .about {
         font-size: 25px;
+        margin-left: 30px;
     }
 }
 
-@media screen and (min-width: 800px) {
-    .twenty {
+
+.paragraph {
+     color: var(--white-color);
+     margin-left: 25px;
+     font-weight: 200
+}
+
+@media screen and (max-width: 800px){
+    .paragraph {
         font-size: 20px;
-    }
+        margin-left: 30px;
+        margin-right: 30px;
 }
-
-
-@media screen and (max-width: 800px) {
-    .twenty {
-        font-size: 10px;
-    }
 }
