--- a/src/components/AboutMe/AboutMe.module.css
+++ b/src/components/AboutMe/AboutMe.module.css
@@ -27,6 +27,8 @@
     margin: 10px 0px 22px 0px;
     line-height: 20px;
     margin-left: 25px;
+    color: var(--white-color);
+    z-index: 1;
 }
 
 @media screen and (max-width: 800px){
