--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,12 +1,20 @@
 .gCard {
   display: inline-block;
-  margin: 20px
+  margin-left: 30px;
+
   
 }
 
 .gCardImage {
   border-radius: 10px;
-  width: 280px;
-  height: 280px;
-  box-shadow: 0px 0px 3px 1px #ccc
+  width: 300px;
+  height: 300px;
+  cursor: pointer;
 }
+
+.gCardImage:hover {
+    width: 400px;
+    height: 400px;
+    transition: all .8s ease-in;
+}
+
