--- a/src/components/Icons/Icons.module.css
+++ b/src/components/Icons/Icons.module.css
@@ -14,3 +14,23 @@
     margin-right: -15px;
     margin-left: -15px;
 }
+
+.icons ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+@media screen and (max-width: 800px) {
+.icons ul li {
+    width: 33.333%;
+    margin: 5px 0px;
+}
+}
+
+.icons ul li {
+text-align: center;
+}
