--- a/src/components/TechnologySection/TechnologySection.module.css
+++ b/src/components/TechnologySection/TechnologySection.module.css
@@ -23,3 +23,11 @@
     margin-left: 25px;
 
 }
+
+@media screen and (max-width: 800px) {
+    .technology {
+        font-size: 25px;
+        margin-left: 30px;
+          
+     }
+}
