--- a/src/components/BlogSection/BlogSection.module.css
+++ b/src/components/BlogSection/BlogSection.module.css
@@ -1,10 +1,25 @@
-.mainCoverContainer {
+.mainContainer {
     min-height: 38vh;
     background-color: var(--black-color)
 }
 
-p {
+
+.blog {
     color: var(--white-color);
-     z-index: 1;
-     margin-left: 10px;
+    z-index: 1;
+    font-size: 40px;
+    position: relative;
+    padding: 25px 0px 20px 0px;
+    margin: 10px 0px 22px 0px;
+    line-height: 20px;
+    margin-left: 25px;
+
+}
+
+@media screen and (max-width: 800px) {
+    .blog {
+        font-size: 25px;
+        margin-left: 30px;
+          
+     }
 }
