--- a/src/index.css
+++ b/src/index.css
@@ -81,7 +81,7 @@ code {
     
 
 
-@media only screen and (max-width: 600px) {
+@media screen and (max-width: 600px) {
   a.arrow__btn {
     display:none;
   }
