--- a/src/components/ContactMe/ContactMe.module.css
+++ b/src/components/ContactMe/ContactMe.module.css
@@ -26,6 +26,12 @@
 .divider {
   display: flex;
   justify-content: center;
-  align-items: center;
 }
 
+
+@media screen and (max-width: 800px) {
+    .divider {
+    flex-wrap: wrap;
+          
+     }
+}
