--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -1,6 +1,5 @@
-
-.container {
-  flex-direction: column;
+.form {
+    flex-direction: column;
 }
 
 .name {
@@ -10,7 +9,7 @@
   height: 48px;
   margin: 3px;
   background-color: var(--white-color);
-  color: white;
+  color: var(--black-color);
   text-align: left;
   font-family: sans-serif;
 }
@@ -24,7 +23,7 @@
   border-radius: 5px;
   margin: 3px;
   background-color: var(--white-color);
-  color: white;
+  color:  var(--black-color);
   text-align: left;
   font-family: sans-serif;
 }
@@ -36,7 +35,7 @@
   border-radius: 5px;
   margin: 3px;
   background-color: var(--white-color);
-  color: white;
+  color: var(--black-color);
   text-align: left;
   font-family: sans-serif;
 }
@@ -68,25 +67,36 @@
 
 
 
-@keyframes bounce {
-  0%,
-  100%,
-  20%,
-  50%,
-  80% {
-    -webkit-transform: translateY(0);
-    -ms-transform: translateY(0);
-    transform: translateY(0);
-  }
-  40% {
-    -webkit-transform: translateY(-10px);
-    -ms-transform: translateY(-10px);
-    transform: translateY(-10px);
-  }
-  60% {
-    -webkit-transform: translateY(-5px);
-    -ms-transform: translateY(-5px);
-    transform: translateY(-5px);
-  }
+@media screen and (max-width: 800px) {
+    .form {
+       display: flex;
+       flex-wrap: wrap;
+       width: 90%
+     }
 }
 
+@media screen and (max-width: 800px) {
+    .name {
+       width: 325px;
+     }
+}
+
+@media screen and (max-width: 800px) {
+    .email {
+       width: 325px
+     }
+}
+
+@media screen and (max-width: 800px) {
+    .message {
+       width: 320px;
+       margin-top: -17px;
+     }
+}
+
+@media screen and (max-width: 800px) {
+    .button {
+       width: 330px;
+       margin-top: -17px;
+     }
+}
