--- a/src/components/AboutMe/AboutMe.module.css
+++ b/src/components/AboutMe/AboutMe.module.css
@@ -27,9 +27,41 @@
     margin: 10px 0px 22px 0px;
     line-height: 20px;
     margin-left: 25px;
-    color: var(--white-color);
+    color: var(--purple-color);
     z-index: 1;
+    visibility: hidden;
+	-webkit-animation: tracking-in-expand 0.7s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+            animation: tracking-in-expand 0.7s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+            
 }
+
+@-webkit-keyframes tracking-in-expand {
+  0% {
+    letter-spacing: -0.5em;
+    opacity: 0;
+  }
+  40% {
+    opacity: 0.6;
+  }
+  100% {
+    opacity: 1;
+    visibility: visible;
+  }
+}
+@keyframes tracking-in-expand {
+  0% {
+    letter-spacing: -0.5em;
+    opacity: 0;
+  }
+  40% {
+    opacity: 0.6;
+  }
+  100% {
+    opacity: 1;
+    visibility: visible;
+  }
+}
+
 
 @media screen and (max-width: 800px){
     .about {
@@ -40,9 +72,9 @@
 
 
 .paragraph {
-     color: var(--white-color);
+     color: var(--purple-color);
      margin-left: 25px;
-     font-weight: 200
+     font-size: 30px
 }
 
 @media screen and (max-width: 800px){
