--- a/src/components/AboutMe/AboutMe.module.css
+++ b/src/components/AboutMe/AboutMe.module.css
@@ -84,3 +84,27 @@
         margin-right: 30px;
 }
 }
+
+.row {
+   margin: 0;
+    padding: 0;
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.image {
+    height: 64px;
+    width: 64px;
+    vertical-align: middle;
+    border-style: none;
+}
+
+
+@media screen and (max-width: 800px){
+    .image {
+    height: 35px;
+    width: 35px;
+
+}
+}
