--- a/src/components/AboutMe/AboutMe.module.css
+++ b/src/components/AboutMe/AboutMe.module.css
@@ -94,17 +94,11 @@
     justify-content: center;
 }
 .image {
-    height: 64px;
-    width: 64px;
+    height: 180px;
+    width: 180px;
+    border-radius: 50%;
     vertical-align: middle;
     border-style: none;
 }
 
 
-@media screen and (max-width: 800px){
-    .image {
-    height: 35px;
-    width: 35px;
-
-}
-}
