--- a/src/components/PortfolioSection/PortfolioSection.module.css
+++ b/src/components/PortfolioSection/PortfolioSection.module.css
@@ -42,7 +42,6 @@
 
 .mainContent {
   flex: 1 1 80%;
-  min-height: 100vh;
 }
 
 .one {
@@ -71,21 +70,16 @@ background: linear-gradient(300deg, rgba(0,0,119,1) 25%, rgba(128,0,128,1) 75%);
 background: linear-gradient(300deg, rgba(238,0,255,1) 25%, rgba(0,0,119,1) 75%);
 }
 
-.brumgo {
+.logo {
     bottom: 20px;
     content: '';
     display: block;
-    height: 60px;
-    /* opacity: 0; */
+    height: 80px;
     position: absolute;
     right: 20px;
-    width: 60px;
-    z-index: 1;
+    width: 80px;
+    z-index: 10;
 }
-
-/* .brumgo:hover {
-  opacity: 1;
-} */
 
 
 
@@ -98,12 +92,27 @@ background: linear-gradient(300deg, rgba(238,0,255,1) 25%, rgba(0,0,119,1) 75%);
 p {
     font-weight: 200;
     margin-left: 40%;
-    font-size: 60px
+    font-size: 50px;
+     opacity: 1;
 }
+
+
+
 
 @media screen and (max-width: 800px) {
     p {
-        font-size: 35px;
+        font-size: 30px;
            margin-left: 10%;   
      }
 }
+
+@media screen and (max-width: 800px) {
+    .logo {
+        height: 55px;
+        width: 55px  
+     }
+}
+
+
+
+
