--- a/src/components/BlogSection/BlogSection.module.css
+++ b/src/components/BlogSection/BlogSection.module.css
@@ -1,15 +1,15 @@
 .mainContainer {
     min-height: 38vh;
-    background-color: var(--black-color)
+    
 }
 
 
 .blog {
-    color: var(--white-color);
+    color: var(--purple-color);
     z-index: 1;
     font-size: 40px;
     position: relative;
-    padding: 25px 0px 20px 0px;
+    padding: 40px 0px 25px 0px;
     margin: 10px 0px 22px 0px;
     line-height: 20px;
     margin-left: 25px;
