--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -1,5 +1,6 @@
 .form {
     flex-direction: column;
+   margin-top: 50px
 }
 
 .name {
@@ -17,7 +18,7 @@
 
 
 .email {
-  width: 220px;
+  width: 223px;
   height: 48px;
   border: 2px solid white;
   border-radius: 5px;
