--- a/src/components/SocialMedia/SocialMedia.module.css
+++ b/src/components/SocialMedia/SocialMedia.module.css
@@ -1,55 +1,26 @@
 .contactList {
-  font-size: 2.3rem;
-  text-align: center;
+    padding: 20px;
 }
 
-
-.contactList li {
-  position: relative;
-  top: 0;
-  display: inline-block;
-  height: 80px;
-  width: 80px;
-  line-height: 73px;
-  background-color: var(--white-color);
-  cursor: pointer;
-  transition: all 0.2s ease-in-out;
-  margin: 10px;
-  border-radius: 50%;
-}
-
-.contactList li a {
-  color: #fff;
-  display: inline-block;
-   width: 50px;
-    height: 50px;
-    position: relative;
-    overflow: hidden;
-    vertical-align: middle;
-}
-
-.contactList li:hover {
-  background-color: var(--black-color);
-}
-
-.contactList li:hover:after {
-  opacity: 1;
-  transform: scale(1.12);
-  transition-timing-function: cubic-bezier(0.37, 0.74, 0.15, 1.65);
-}
-
-.contactList li:hover a {
-  color: var(--black-color);
-}
 
 .subtitle {
-    font-size: 25px;
-    margin: 20px
+  color: var(--white-color);
+    z-index: 1;
+    font-size: 40px;
+    position: relative;
+    padding: 25px 0px 20px 0px;
+    margin: 10px 0px 22px 0px;
+    line-height: 20px;
+    font-weight: bold;
 }
-
 
 @media screen and (max-width: 800px) {
-    .contactList {
-      margin-left: -30px
+    .subtitle {
+        font-size: 25px;
+        margin-left: 150px;
+          
      }
 }
+
+
+ 
