--- a/src/components/PortfolioSection/PortfolioSection.module.css
+++ b/src/components/PortfolioSection/PortfolioSection.module.css
@@ -72,13 +72,12 @@ background: linear-gradient(300deg, rgba(238,0,255,1) 25%, rgba(0,0,119,1) 75%);
 
 .logo {
     bottom: 20px;
-    content: '';
     display: block;
     height: 80px;
     position: absolute;
     right: 20px;
     width: 80px;
-    z-index: 10;
+
 }
 
 
@@ -101,15 +100,16 @@ p {
 
 @media screen and (max-width: 800px) {
     p {
-        font-size: 30px;
+        font-size: 28px;
            margin-left: 10%;   
      }
 }
 
 @media screen and (max-width: 800px) {
     .logo {
-        height: 55px;
-        width: 55px  
+        height: 50px;
+        width: 50px;
+        z-index: 1;
      }
 }
 
