--- a/src/components/SocialMedia/SocialMedia.module.css
+++ b/src/components/SocialMedia/SocialMedia.module.css
@@ -1,6 +1,5 @@
 .contactList {
     padding: 20px;
-    text-align: right;
 }
 
 
@@ -9,17 +8,18 @@
     z-index: 1;
     font-size: 40px;
     position: relative;
-    padding: 25px 0px 20px 0px;
-    margin: 10px 0px 22px 0px;
+    padding: 27px 0px 20px 0px;
+    margin: 10px 0px 10px 0px;
     line-height: 20px;
     font-weight: bold;
+     margin-right: 570px;
 }
+
 
 @media screen and (max-width: 800px) {
     .subtitle {
         font-size: 25px;
-        margin-left: 150px;
-          
+           margin-right: 220px;
      }
 }
 
