--- a/src/components/BlogSlider/BlogSlider.module.css
+++ b/src/components/BlogSlider/BlogSlider.module.css
@@ -14,12 +14,14 @@
 }
 
  .item {
-      padding: 0 2px;
+      padding: 0 3px;
       transition: 0.25s all;
+      height: 170px;
+      width: 400px;
     }
       
     .item:hover { 
-        margin: 0 40px;
+        margin: 0 60px;
         transform: scale(1.2);
       }
 
@@ -29,19 +31,19 @@
       text-decoration: none;
       font-size: 6em;
       background:rgb(0,0,0);
-      width: 80px;
+      width: 60px;
       padding: 20px;
       text-align: center;
       z-index: 1; 
 }
 
      .arrowBtn:nth-of-type(1) {
-        top:0; bottom:0; left:0;
+        top:20; bottom:0; left:0;
         background: linear-gradient(-90deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 100%);
       }
 
       .arrowBtn:nth-of-type(2) {
-        top:0; bottom:0; right: 0;
+        top:20; bottom:0; right: 0;
         background: linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 100%);
       }
 
